# rust-polymur-hash

./: .gitignore  Cargo.toml  README.md
benches/: benchmark.rs
examples/: basic.rs  hashmap.rs  tweaks.rs
src/: lib.rs
